Adding button to opencolab

--- a/lfya/04 Abro paréntesis, abro paréntesis, cierro paréntesis.ipynb
+++ b/lfya/04 Abro paréntesis, abro paréntesis, cierro paréntesis.ipynb
@@ -1,18 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "import sys"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/04%20Abro%20par%C3%A9ntesis%2C%20abro%20par%C3%A9ntesis%2C%20cierro%20par%C3%A9ntesis.ipynb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execute if not installes\n",
+    "!pip install maquinas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,52 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No terminal : S\n",
-      "Terminals   : a, b\n",
-      "Start       : S\n",
-      "Productions :\n",
-      " S → aSb | ε\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(aⁿbⁿ.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      " "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "roots,chart,forest=aⁿbⁿ.parse('aaaabbbb')\n",
     "trees=aⁿbⁿ.extract_trees(forest)\n",
@@ -89,215 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Derivation:  \n",
-      "S ⇒  ε\n",
-      "  ⇒  ε\n",
-      " Derivation:  ab\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aεb\n",
-      "  ⇒  aεb\n",
-      "  ⇒  aεb\n",
-      " Derivation:  aabb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaεbb\n",
-      "  ⇒  aaεbb\n",
-      "  ⇒  aaεbb\n",
-      "  ⇒  aaεbb\n",
-      " Derivation:  aaabbb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaεbbb\n",
-      "  ⇒  aaaεbbb\n",
-      "  ⇒  aaaεbbb\n",
-      "  ⇒  aaaεbbb\n",
-      "  ⇒  aaaεbbb\n",
-      " Derivation:  aaaabbbb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      "  ⇒  aaaaεbbbb\n",
-      " Derivation:  aaaaabbbbb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaεbbbbb\n",
-      "  ⇒  aaaaaεbbbbb\n",
-      "  ⇒  aaaaaεbbbbb\n",
-      "  ⇒  aaaaaεbbbbb\n",
-      "  ⇒  aaaaaεbbbbb\n",
-      "  ⇒  aaaaaεbbbbb\n",
-      "  ⇒  aaaaaεbbbbb\n",
-      " Derivation:  aaaaaabbbbbb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaεbbbbbb\n",
-      "  ⇒  aaaaaaεbbbbbb\n",
-      "  ⇒  aaaaaaεbbbbbb\n",
-      "  ⇒  aaaaaaεbbbbbb\n",
-      "  ⇒  aaaaaaεbbbbbb\n",
-      "  ⇒  aaaaaaεbbbbbb\n",
-      "  ⇒  aaaaaaεbbbbbb\n",
-      "  ⇒  aaaaaaεbbbbbb\n",
-      " Derivation:  aaaaaaabbbbbbb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaaSbbbbbbb\n",
-      "  ⇒  aaaaaaaSbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      "  ⇒  aaaaaaaεbbbbbbb\n",
-      " Derivation:  aaaaaaaabbbbbbbb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaaSbbbbbbb\n",
-      "  ⇒  aaaaaaaSbbbbbbb\n",
-      "  ⇒  aaaaaaaaSbbbbbbbb\n",
-      "  ⇒  aaaaaaaaSbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      "  ⇒  aaaaaaaaεbbbbbbbb\n",
-      " Derivation:  aaaaaaaaabbbbbbbbb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaaSbbbbbbb\n",
-      "  ⇒  aaaaaaaSbbbbbbb\n",
-      "  ⇒  aaaaaaaaSbbbbbbbb\n",
-      "  ⇒  aaaaaaaaSbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaSbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaSbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaεbbbbbbbbb\n",
-      " Derivation:  aaaaaaaaaabbbbbbbbbb\n",
-      "S ⇒  aSb\n",
-      "  ⇒  aSb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaSbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaSbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaSbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaSbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaSbbbbbb\n",
-      "  ⇒  aaaaaaaSbbbbbbb\n",
-      "  ⇒  aaaaaaaSbbbbbbb\n",
-      "  ⇒  aaaaaaaaSbbbbbbbb\n",
-      "  ⇒  aaaaaaaaSbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaSbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaSbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaSbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaSbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      "  ⇒  aaaaaaaaaaεbbbbbbbbbb\n",
-      " "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(11):\n",
     "    a='a'*i\n",
@@ -317,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,69 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No terminal : R, B\n",
-      "Terminals   : ϵ, b, (, ∅, ), *, a, +\n",
-      "Start       : R\n",
-      "Productions :\n",
-      " R → B | R+R | R* | RR | (R)\n",
-      " B → a | b | ϵ | ∅\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(re.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R ⇒  R*\n",
-      "  ⇒  (R)*\n",
-      "  ⇒  (R)*\n",
-      "  ⇒  (RR)*\n",
-      "  ⇒  (RRR)*\n",
-      "  ⇒  (R*RR)*\n",
-      "  ⇒  (B*RR)*\n",
-      "  ⇒  (a*RR)*\n",
-      "  ⇒  (a*RR)*\n",
-      "  ⇒  (a*RR)*\n",
-      "  ⇒  (a*BR)*\n",
-      "  ⇒  (a*bR)*\n",
-      "  ⇒  (a*bR)*\n",
-      "  ⇒  (a*bR*)*\n",
-      "  ⇒  (a*bRR*)*\n",
-      "  ⇒  (a*bRRR*)*\n",
-      "  ⇒  (a*bR*RR*)*\n",
-      "  ⇒  (a*bB*RR*)*\n",
-      "  ⇒  (a*ba*RR*)*\n",
-      "  ⇒  (a*ba*RR*)*\n",
-      "  ⇒  (a*ba*RR*)*\n",
-      "  ⇒  (a*ba*BR*)*\n",
-      "  ⇒  (a*ba*bR*)*\n",
-      "  ⇒  (a*ba*bR*)*\n",
-      "  ⇒  (a*ba*bB*)*\n",
-      "  ⇒  (a*ba*ba*)*\n",
-      "  ⇒  (a*ba*ba*)*\n",
-      "  ⇒  (a*ba*ba*)*\n",
-      "  ⇒  (a*ba*ba*)*\n",
-      "  ⇒  (a*ba*ba*)*\n",
-      " "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "roots,chart,forest=re.parse('(a*ba*ba*)*')\n",
     "trees=list(re.extract_trees(forest))\n",
@@ -412,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,17 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of trees 28\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Total number of trees\",len(trees))"
    ]
