--- a/lfya/01 De lenguajes y palabras.ipynb
+++ b/lfya/01 De lenguajes y palabras.ipynb
@@ -8,12 +8,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 00 Instalando la librería \n",
+    "\n",
+    "Se instala la librería [maquinas](https://pypi.org/project/maquinas/)\n",
+    "\n",
+    "**Requerido en colab**, _opcional en ambiente local a través de jupyter_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!pip install maquinas --upgrade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 01 Importar módulo para manipular lenguajes\n",
+    "\n",
+    "Existen dos elemento: _Alphabet_ y _Language_"
    ]
   },
   {
@@ -26,6 +46,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 01 Alphabet\n",
+    "\n",
+    "_Alphabet_ es la clase para definir [alfabetos](https://ivanvladimir.gitlab.io/lfya_book/docs/01delenguajesypalabras/02b%C3%A1sicos/#alfabeto), en práctica engloba al [set](https://docs.python.org/3.7/library/stdtypes.html#set-types-set-frozenset), todo lo que se pueda hacer con esa librería se puede hacer con _alphabet_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 01.a Crear un alfabeto"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,6 +69,15 @@
    "source": [
     "sigma=Alphabet(['a','b'])\n",
     "print(sigma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 01.b Potencia de un alfabeto\n",
+    "\n",
+    "Operación de potencia para un [alfabeto](https://ivanvladimir.gitlab.io/lfya_book/docs/01delenguajesypalabras/02b%C3%A1sicos/#potencia-de-un-alfabeto)"
    ]
   },
   {
@@ -49,6 +94,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 01.c Σ<sup>∗</sup>\n",
+    "\n",
+    "Creación de un [lenguaje notable](https://ivanvladimir.gitlab.io/lfya_book/docs/01delenguajesypalabras/02b%C3%A1sicos/#otro-lenguaje-notable)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -61,7 +115,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Languages"
+    "## 02 Language\n",
+    "\n",
+    "Esta es la clase principal para [lenguajes](https://ivanvladimir.gitlab.io/lfya_book/docs/01delenguajesypalabras/02b%C3%A1sicos/#lenguajes), notar que no existe un objeto para [cadenas](https://ivanvladimir.gitlab.io/lfya_book/docs/01delenguajesypalabras/02b%C3%A1sicos/#lenguajes) porqué usamos directamente las de python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.a Creación de un lenguaje"
    ]
   },
   {
@@ -76,6 +139,15 @@
     "print(\"Language 1:\",L1)\n",
     "print(\"Language 2:\",L2)\n",
     "print(\"Language 3:\",L3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.b  operaciones de lenguajes\n",
+    "\n",
+    "Estos son ejemplos de las [operaciones para lenguajes](https://ivanvladimir.gitlab.io/lfya_book/docs/01delenguajesypalabras/03operacioneslenguajes/)"
    ]
   },
   {
@@ -140,7 +212,7 @@
    "source": [
     "print(\"L1*:\",L1.star())\n",
     "print(\"L2*:\",L2.star())\n",
-    "print(\"L3*:\",L3.star()) #It has an error and loops"
+    "print(\"L3*:\",L3.star()) "
    ]
   }
  ],
