--- a/lfya/02 La máquina sin memoria.ipynb
+++ b/lfya/02 La máquina sin memoria.ipynb
@@ -8,12 +8,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 00 Instalando la librería \n",
+    "\n",
+    "Se instala la librería [maquinas](https://pypi.org/project/maquinas/)\n",
+    "\n",
+    "**Requerido en colab**, _opcional en ambiente local a través de jupyter_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!pip install maquinas --upgrade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 01 Importar módulo para cargar autómatas finitos y el módulo de simiulación\n",
+    "\n",
+    "Existen dos elemento: _load_fa_ y _Simulation_ (en este momento _Simulación_ sólo puede ir hacia adelante)"
    ]
   },
   {
@@ -24,6 +44,15 @@
    "source": [
     "from maquinas.io import load_fa\n",
     "from maquinas.simulation import Simulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02 Automatas finitos (determinísticos)\n",
+    "\n",
+    "Se puede crear un [AFD](https://ivanvladimir.gitlab.io/lfya_book/docs/02lam%C3%A1quinasinmemoria/04aut%C3%B3matafinito/#aut%c3%b3mata-finito-determin%c3%adstico) desde la definición tipo tabla de uno de estos; notar que en la librería a este tipo de máquina se le llamó _AF_, mientras que en la librería se le denomina _AFD_."
    ]
   },
   {
@@ -41,12 +70,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.a Graficarlo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "bes_pares.graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.b Probar si cadenas son aceptadas por un AFD\n",
+    "\n",
+    "Para probar si una cadena es [aceptada por AFD](https://ivanvladimir.gitlab.io/lfya_book/docs/02lam%C3%A1quinasinmemoria/04aut%C3%B3matafinito/#procesando-cadenas-con-af) se puede usar la función _accepts_"
    ]
   },
   {
@@ -58,6 +103,25 @@
     "cadenas=[\"aaa\",\"aab\",'abb','bba','baba','baa']\n",
     "for w in cadenas:\n",
     "    print(f\"Probando con {w} el AFD arroja:\",bes_pares.accepts(w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.c Aplicación de delta extendida\n",
+    "\n",
+    "También es posible aplicar la función de [delta extendida](https://ivanvladimir.gitlab.io/lfya_book/docs/02lam%C3%A1quinasinmemoria/04aut%C3%B3matafinito/#procesando-cadenas-con-af) la cual regresa el estado al que se llega"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for w in cadenas:\n",
+    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",bes_pares.delta_extended(bes_pares.q_0,w))"
    ]
   },
   {
@@ -100,6 +164,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for w in cadenas:\n",
+    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",bes_pares.delta_extended(bes_pares.q_0,w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bes_pares2=load_fa(\"\"\"\n",
     "      | a  | b\n",
     "->q0] | q0 | q1\n",
@@ -134,8 +208,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for w in cadenas:\n",
+    "    print(f\"Partiendo del estado inicial con {w} se llega al estado\",bes_pares.delta_extended(bes_pares.q_0,w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02.d Simulación\n",
+    "\n",
+    "Simulación es un modo interactivo que permite ver el avance del autómata paso por paso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s=Simulation(bes_pares,\"baaabaaabb\")\n",
     "s.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.e Paso a paso\n",
+    "\n",
+    "Para visualizar qué pasa paso a paso en el análisis de una cadena se puede iterar sobre la funcion _delta_stepwise_:"
    ]
   },
   {
@@ -152,29 +254,6 @@
     "    res=q\n",
     "    \n",
     "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_loquesea=load_fa(\"\"\"\n",
-    "      | a  | b\n",
-    "->q0  | q1 | \n",
-    "  q1] | q1 | q1\n",
-    "\"\"\")\n",
-    "a_loquesea.print_summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_loquesea.graph()"
    ]
   }
  ],
