--- a/lfya/04 Abro paréntesis, abro paréntesis, cierro paréntesis.ipynb
+++ b/lfya/04 Abro paréntesis, abro paréntesis, cierro paréntesis.ipynb
@@ -8,6 +8,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 00 Instalando la librería \n",
+    "\n",
+    "Se instala la librería [maquinas](https://pypi.org/project/maquinas/)\n",
+    "\n",
+    "**Requerido en colab**, _opcional en ambiente local a través de jupyter_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,6 +26,15 @@
    "source": [
     "# Execute if not installes\n",
     "!pip install maquinas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 01 Importar módulo para cargar gramáticas libres de contexto y funciones auxiliares\n",
+    "\n",
+    "Existen dos elemento: _load_fa_, _las reducciones_, el proceso de _minimización_, _RE_ y _Simulation_ (en este momento _Simulación_ sólo puede ir hacia adelante)"
    ]
   },
   {
@@ -28,12 +48,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "aⁿbⁿ=CFG(\"S->aSb; S-> epsilon;\")"
+    "## 02 Gramática libres de contexto\n",
+    "\n",
+    "Para crear una gramática se puede crear directamente desde la clase _ContextFreeGrammar_"
    ]
   },
   {
@@ -42,7 +62,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(aⁿbⁿ.summary())"
+    "aⁿbⁿ=CFG(\"S->aSb; S-> epsilon;\")\n",
+    "aⁿbⁿ.print_summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02.a \"Parseo\" análisis de una cadena\n",
+    "\n",
+    "Para analizar una cadena _w_, se le usa el método de _parse_; y regresa tres objetos:\n",
+    "    \n",
+    "    * roots, los símbolos iniciales \n",
+    "    * chart, el _chart parser_ del proceso de análisis de la cadena\n",
+    "    * forest, los áboles con nodos compartidos _tree_\n",
+    "    \n",
+    "Para extraer los árboles se hace con la función _extract_tree_; y regresa un iterator sobre los árboles. Para producir la derivación, paso a paso, es posible extraerla con la función _derivación_;"
    ]
   },
   {
@@ -53,11 +89,21 @@
    "source": [
     "roots,chart,forest=aⁿbⁿ.parse('aaaabbbb')\n",
     "trees=aⁿbⁿ.extract_trees(forest)\n",
-    "for i,step in enumerate(aⁿbⁿ.derivation(list(trees)[0])):\n",
+    "tree=list(trees)[0]\n",
+    "for i,step in enumerate(aⁿbⁿ.derivation(tree)):\n",
     "    if not i:\n",
     "        print(\"\".join(step),end=\"\")\n",
     "    else:\n",
     "        print(\" ⇒ \",\"\".join(step),end=\"\\n \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aⁿbⁿ.graph_tree(tree)"
    ]
   },
   {
@@ -88,9 +134,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roots,chart,forest=aⁿbⁿ.parse(\"aaabbb\")\n",
+    "roots,chart,forest=aⁿbⁿ.parse(\"aaaaabbbbb\")\n",
     "trees=aⁿbⁿ.extract_trees(forest)\n",
-    "aⁿbⁿ.save_trees_img(trees,filename='arbol_aaabbb.png')"
+    "aⁿbⁿ.graph_trees(trees)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.b Creando una gramática para cadenas que representen expresiones regulares\n",
+    "\n",
+    "La siguiente gramática representa a ER para el alfabeto \n",
+    "\n",
+    "$$\\Sigma=\\{a,b\\}$$"
    ]
   },
   {
@@ -99,15 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "re=CFG('R->B; R-> R \"+\" R; R -> R \"*\"; R-> RR; R->(R); B-> a; B -> b; B -> \"ϵ\"; B -> \"∅\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "re=CFG('R->B; R-> R \"+\" R; R -> R \"*\"; R-> RR; R->(R); B-> a; B -> b; B -> \"ϵ\"; B -> \"∅\"')\n",
     "print(re.summary())"
    ]
   },
@@ -132,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "re.save_trees_img(trees,filename='arboles_re')"
+    "re.graph_trees(trees)"
    ]
   },
   {
@@ -141,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "re.save_trees_img([trees[0]],filename=f'arbol_re') "
+    "re.graph_tree(trees[0])"
    ]
   },
   {
@@ -170,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
