--- a/advanced/Examples from SPPF-Style Parsing From Earley Recognisers.ipynb
+++ b/advanced/Examples from SPPF-Style Parsing From Earley Recognisers.ipynb
@@ -299,7 +299,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7f62fcad5cc0>"
+       "<graphviz.dot.Graph at 0x7f1de210b4a8>"
       ]
      },
      "execution_count": 6,
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -444,10 +444,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7f62fca77c88>"
+       "<graphviz.dot.Graph at 0x7f1de20f4198>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -19129,7 +19129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
