--- a/lfya/02 La máquina sin memoria.ipynb
+++ b/lfya/02 La máquina sin memoria.ipynb
@@ -95,15 +95,33 @@
    "outputs": [],
    "source": [
     "from maquinas.regular.dfa import DeterministicFiniteAutomaton as DFA\n",
-    "from maquinas.simulation import Simulation"
+    "from maquinas.simulation import Simulation\n",
+    "from maquinas.io import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "States  : q₀, q₁\n",
+      "Sigma   : a, b\n",
+      "Initial : q₀\n",
+      "Aceptors: {q₀}\n",
+      "Transitions:\n",
+      " q₀,a → q₀\n",
+      " q₀,b → q₁\n",
+      " q₁,b → q₀\n",
+      " q₁,a → q₁\n"
+     ]
+    }
+   ],
    "source": [
+    "#@title creating DFA\n",
     "bes_pares=DFA(Q=['q₀','q₁'],\n",
     "                         sigma=['a','b'],\n",
     "                         q_0='q₀',\n",
@@ -113,16 +131,91 @@
     "                            (('q₁','b'),'q₀'),\n",
     "                            (('q₁','a'),'q₁'),\n",
     "                            (('q₀','b'),'q₁'),\n",
-    "                         ])"
+    "                         ])\n",
+    "bes_pares.print_summary()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "States  : q₀, q₁\n",
+      "Sigma   : a, b\n",
+      "Initial : q₀\n",
+      "Aceptors: {q₀}\n",
+      "Transitions:\n",
+      " q₀,a → q₀\n",
+      " q₀,b → q₁\n",
+      " q₁,a → q₁\n",
+      " q₁,b → q₀\n"
+     ]
+    }
+   ],
    "source": [
-    "bes_pares.save_img(\"bes_pares\",dpi=\"600\")"
+    "bes_pares=load_fa(\"\"\"\n",
+    "        | a | b\n",
+    "-> q₀]  |q₀  | q₁\n",
+    "   q₁   |q₁  | q₀\n",
+    "\"\"\")\n",
+    "bes_pares.print_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "States  : q₀, q₁\n",
+      "Sigma   : a, b\n",
+      "Initial : q₀\n",
+      "Aceptors: {q₀}\n",
+      "Transitions:\n",
+      " q₀,a → q₀\n",
+      " q₀,b → q₁\n",
+      " q₁,a → q₁\n",
+      " q₁,b → q₀\n"
+     ]
+    }
+   ],
+   "source": [
+    "bes_pares_=load_fa(\"\"\"\n",
+    "        | a | b\n",
+    "-> q₀   |q₀  | q₁\n",
+    "   q₁]  |q₁  | q₀\n",
+    "\"\"\")\n",
+    "bes_pares.print_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'q_fs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-91ca750493ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbes_pares_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"bes_pares_\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdpi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"600\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/projects/maquinas/maquinas/regular/fa.py\u001b[0m in \u001b[0;36msave_img\u001b[0;34m(self, filename, q_c, a_c, q_prev, symbols, states, format, dpi, string)\u001b[0m\n\u001b[1;32m    617\u001b[0m             \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    618\u001b[0m             \u001b[0mdpi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdpi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 619\u001b[0;31m             \u001b[0mstring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    620\u001b[0m         )\n\u001b[1;32m    621\u001b[0m         \u001b[0mdot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcleanup\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/maquinas/maquinas/regular/dfa.py\u001b[0m in \u001b[0;36mgraph\u001b[0;34m(self, q_c, a_c, q_prev, symbols, states, format, dpi, string, **args)\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m             \u001b[0;34m(\u001b[0m\u001b[0mq_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minfo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 135\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_fs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    136\u001b[0m                 \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mq_i\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mq_prev\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma_c\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'q_fs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "bes_pares_.save_img(\"bes_pares_\",dpi=\"600\")"
    ]
   },
   {
@@ -131,48 +224,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bes_pares_=DFA(Q=['q₀','q₁'],\n",
-    "                         sigma=['a','b'],\n",
-    "                         q_0='q₀',\n",
-    "                         A=['q₁'],\n",
-    "                         delta=[\n",
-    "                            (('q₀','a'),'q₀'),\n",
-    "                            (('q₁','b'),'q₀'),\n",
-    "                            (('q₁','a'),'q₁'),\n",
-    "                            (('q₀','b'),'q₁'),\n",
-    "                         ])"
+    "bes_pares__=load_fa(\"\"\"\n",
+    "        | a | b\n",
+    "-> q₀]  |q₀  | q₁\n",
+    "   q₁]  |q₁  | q₀\n",
+    "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bes_pares_.save_img(\"bes_pares_\",dpi=\"600\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bes_pares__=DFA(Q=['q₀','q₁'],\n",
-    "                         sigma=['a','b'],\n",
-    "                         q_0='q₀',\n",
-    "                         A=['q₀','q₁'],\n",
-    "                         delta=[\n",
-    "                            (('q₀','a'),'q₀'),\n",
-    "                            (('q₁','b'),'q₀'),\n",
-    "                            (('q₁','a'),'q₁'),\n",
-    "                            (('q₀','b'),'q₁'),\n",
-    "                         ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,13 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6f456073029459a98e4d1f7d1688d0a",
+       "model_id": "cbc8a7da209e42c6a7b5b258ab5b17d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,28 +269,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/tmp/tmpozywzc6f/0.png'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-775d28d0cdaa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbes_pares\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_gif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"abbaa\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/projects/maquinas_examples/env/lib/python3.6/site-packages/maquinas/regular/fa.py\u001b[0m in \u001b[0;36msave_gif\u001b[0;34m(self, w, filename, symbols, states, dpi, show, loop, duration)\u001b[0m\n\u001b[1;32m    619\u001b[0m                         dpi=dpi,string=(processed,a,w_))\n\u001b[1;32m    620\u001b[0m                 \u001b[0mq_prev\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 621\u001b[0;31m             \u001b[0mim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename_\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".png\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    622\u001b[0m             \u001b[0mimages\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    623\u001b[0m             \u001b[0mi\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/maquinas_examples/env/lib/python3.6/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode)\u001b[0m\n\u001b[1;32m   2876\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2877\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2878\u001b[0;31m         \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2879\u001b[0m         \u001b[0mexclusive_fp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2880\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/tmp/tmpozywzc6f/0.png'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bes_pares.save_gif(\"abbaa\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
